# AndroidOutBox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  gradle.properties  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: ci.yml
android-outbox/: build.gradle.kts  consumer-rules.pro  native-host-tests.gradle
android-outbox/src/hostTest/c/: observability_logger_core_stress_test.c  observability_logger_core_test.c  observability_logger_host_jni_test.cpp  outbox_core_stress_test.c  outbox_core_test.c  outbox_host_jni_test.cpp
android-outbox/src/main/cpp/: CMakeLists.txt  observability_logger_control.c  observability_logger_control.h  observability_logger_core.c  observability_logger_core.h  observability_logger_frame.c  observability_logger_frame.h  observability_logger_internal.h  observability_logger_jni.cpp  observability_logger_queue.c  observability_logger_queue.h  observability_logger_spool.c  observability_logger_spool.h  observability_logger_writer.c  observability_logger_writer.h  outbox_control.c  outbox_control.h  outbox_core.c  outbox_core.h  outbox_frame.c  outbox_frame.h  outbox_internal.h  outbox_jni.cpp  outbox_queue.c  outbox_queue.h  outbox_spool.c  outbox_spool.h  outbox_writer.c  outbox_writer.h
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: doc.md  testing.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
maven/io/github/phuongtran/android-outbox/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  (+1 more)
(+170 files in other folders)
